# Project-1

./: README.md
Project_1/src/: CMakeLists.txt  compress.cpp  uncompress.cpp
Project_1/src/bitStream/: CMakeLists.txt
Project_1/src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  CMakeLists.txt
Project_1/src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  CMakeLists.txt
Project_1/src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp
Project_1/test/: test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
